--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 /js/MathJax/
 /config/config.php
 /data/cache/*.cache
-/data/cache/*.cache
 /LocalSetting.php
 /data/private/*.tmp
+/data/cachehtml/*.html
 function/plugins/rank/board_other_oj/cf_api_key.php
