--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,4 @@ script: phpunit --configuration phpunit.xml --coverage-text
 notifications:
   slack:
     rooms:
-      - nymphia:5jkzibGrfkkC1DPa1E7Rpj8K#general
+      - nymphia:5jkzibGrfkkC1DPa1E7Rpj8K#github-skyoj
