--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,9 @@
 /data/cachehtml/*.html
 function/plugins/rank/board_other_oj/cf_api_key.php
 /tools/*.txt
+/install/sky.sql
+/css/bootstrap
+/tools/start.bat
+/data/problem
+/function/externals
+/js/vue
