--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
-        "phpseclib/phpseclib": "2.0.*"
+        "phpseclib/phpseclib": "2.0.*",
+        "cache/filesystem-adapter": "^1.0"
     }
 }
