--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,13 @@
 {
+    "autoload": {
+        "psr-4": {
+            "SkyOJ\\":"SkyOJ/"
+        }
+    },
     "require": {
         "phpseclib/phpseclib": "2.0.*",
         "cache/filesystem-adapter": "^1.0",
-        "erusev/parsedown": "^1.6"
+        "erusev/parsedown": "^1.6",
+        "robmorgan/phinx": "^0.9.1"
     }
 }
