--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,6 @@
         "cache/filesystem-adapter": "^1.0",
         "erusev/parsedown": "^1.6",
         "robmorgan/phinx": "^0.9.1",
-        "twbs/bootstrap": "4.0.0-beta.2"
+        "twbs/bootstrap": "^4.1"
     }
 }
