--- a/composer.json
+++ b/composer.json
@@ -10,5 +10,8 @@
         "erusev/parsedown": "^1.6",
         "robmorgan/phinx": "^0.9.1",
         "twbs/bootstrap": "^4.1"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^7"
     }
 }
